# tempext-opencode-pm

./: .eslintignore  .eslintrc.node.cjs  .gitignore  AGENTS.md  Cargo.toml  Makefile  eslint.config.js  package.json  pnpm-lock.yaml  requirements.txt  vite.config.js
.github/ISSUE_TEMPLATE/: attempt-lifecycle.yml  bug.yaml  bug.yml  feature.yaml  feature.yml  gate-validation.yml  hitl-endpoints.yml  ingest-event-subscriber.yml  metrics-endpoint.yml  ops.yaml  ops.yml  poe-release-dry-run.yml  queue-engine-v1.yml  spec.yaml  spec.yml  sse-contract-client.yml  task-implementation.yml  wire-osm-soar.yml
.github/workflows/: ci-matrix.yml  ci.yml  postmerge-srr.yml  release-poe.yml
contracts/examples/: example.context.pack.json  example.orchestration.snapshot.json  example.task.runlog.json
contracts/schemas/: context.pack.schema.json  orchestration.snapshot.schema.json  task.runlog.schema.json
crates/opencode_pm/: Cargo.toml
crates/opencode_pm/src/: api.rs  events.rs  ko.rs  main.rs  models.rs  pm_service.rs
crates/opencode_pm/src/services/: mod.rs  model_manager.rs  secrets.rs  specbundle.rs
crates/opencode_pm/src/ui/: index.html  ui.js
crates/opencode_pm_core/: Cargo.toml
crates/opencode_pm_core/src/: context_service.rs  lib.rs
docs/: ARCHIVE.md  TES-2025-SCHEDULING.md
docs/logs/2025-09/: log-2025-09-17.md  log-2025-09-18.md
migrations/: 0001_init.sql
policies/: cargo-deny.toml  guardian.md  license-allowlist.md  originality.yml
schemas/: opencode_pm.openapi.json
scripts/: log_today.sh  sidecar_app.py  validate_contracts.py
src/: App.jsx
