[package]
name = "opencode_pm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features=["env-filter"] }
thiserror = "1"
uuid = { version = "1", features = ["v4","serde"] }
time = { version = "0.3", features=["macros","serde"] }
http = "1"

# stubs; wire these later
# sqlx = { version = "0.7", features = ["runtime-tokio","postgres","macros"], optional = true }
# redis = { version = "0.25", optional = true }
# async-nats = { version = "0.36", optional = true }

[features]
default = []